# aws-cli-utils

./: Makefile  README.md  ami-users  aws-cancel-request  aws-cancel-requests  aws-get-ubuntu-ami  aws-list  aws-list-requests  aws-price  aws-request  aws-request-v2  aws-scp  aws-ssh  aws-start  aws-stop  aws-terminate  aws-update-request-config-userdata  aws-wait-request  default-aws-request.json  default-aws-request.json.ejs  gpu-small-aws-request.json.ejs  install.sh  pyproject.toml
aws_cli_utils/scripts/: aws_get_ubuntu_ami.py  aws_request.py  aws_start.py  aws_stop.py  aws_terminate.py  bash_scripts_wrapper.py
aws_cli_utils/scripts/bash/: aws-price  aws-scp  aws-ssh  aws-wait-request  aws-wait-up
